--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,51 @@
+@font-face {
+  font-family: 'Nunita Sans';
+  src: url('./Assets/Fonts/Nunito_Sans/NunitoSans_10pt-ExtraLight.ttf');
+  font-weight: 300;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Nunita Sans';
+  src: url('./Assets/Fonts/Nunito_Sans/NunitoSans_10pt-Light.ttf');
+  font-weight: 400;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Nunita Sans';
+  src: url('./Assets/Fonts/Nunito_Sans/NunitoSans_10pt-Regular.ttf');
+  font-weight: 500;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Nunita Sans';
+  src: url('./Assets/Fonts/Nunito_Sans/NunitoSans_10pt-SemiBold.ttf');
+  font-weight: 600;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Nunita Sans';
+  src: url('./Assets/Fonts/Nunito_Sans/NunitoSans_10pt-Bold.ttf');
+  font-weight: 700;
+  font-display: swap;
+}
+
+* {
+  margin: 0px;
+  box-sizing: border-box;
+  font-family: 'Nunita Sans';
+  text-decoration: none;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  margin: 0px;
 }
 
 code {
